--- a/css/container/indexContainer.css
+++ b/css/container/indexContainer.css
@@ -31,18 +31,35 @@
     background-color: #fcc;
     display: flex;
     justify-content: space-between;
+    padding: 15px 0;
 }
 .container .inner-container .index .grid-container .grid-menu .sub-menu {
-    flex: 0 1 400px;
+    /* flex: 0 1 400px; */
+    display: flex;
+    justify-content: space-between;
+
 }
 .container .inner-container .index .grid-container .grid-menu .sub-menu>ul {
     display: flex;
     justify-content: space-between;
 }
 .container .inner-container .index .grid-container .grid-menu .sub-menu>ul>li {
-    line-height: 50px;
+    line-height: 30px;
+    display: flex;
+    justify-content: space-between;
+    font-size: 12px;
+    padding: 0 10px;
+}
+.container .inner-container .index .grid-container .grid-menu span.right-btn {
+    display: block;
+    flex: 0 0 100px;
+    height: 30px;
+    background-color: #000;
 }
 .container .inner-container .index .grid-container .grid-con {
     grid-area: 3/1/4/-1;
     background-color: #ccc;
+
+    /* grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(2, minmax(300px)); */
 }
