--- a/css/container/indexContainer.css
+++ b/css/container/indexContainer.css
@@ -59,7 +59,42 @@
 .container .inner-container .index .grid-container .grid-con {
     grid-area: 3/1/4/-1;
     background-color: #ccc;
-
-    /* grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: repeat(2, minmax(300px)); */
+}
+.container .inner-container .index .grid-container .grid-con>ul {
+    display: grid;
+    
+    grid-template-columns: repeat(12, 1fr);
+    grid-template-rows: repeat(2, minmax(400px, auto));
+    
+    grid-auto-rows: minmax(400px, auto);
+    gap: 5px;
+}
+.container .inner-container .index .grid-container .grid-con>ul>li img {
+    width: 100%;
+    height: auto;
+    display: block;
+}
+.container .inner-container .index .grid-container .grid-con>ul>li:nth-child(1) {
+    grid-area: 1/1/2/4;
+}
+.container .inner-container .index .grid-container .grid-con>ul>li:nth-child(2) {
+    grid-area: 1/4/2/7;
+}
+.container .inner-container .index .grid-container .grid-con>ul>li:nth-child(3) {
+    grid-area: 1/7/2/10;
+}
+.container .inner-container .index .grid-container .grid-con>ul>li:nth-child(4) {
+    grid-area: 1/10/2/-1;    
+}
+.container .inner-container .index .grid-container .grid-con>ul>li:nth-child(5) {
+    grid-area: 2/1/3/4;
+}
+.container .inner-container .index .grid-container .grid-con>ul>li:nth-child(6) {
+    grid-area: 2/4/3/7;    
+}
+.container .inner-container .index .grid-container .grid-con>ul>li:nth-child(7) {
+    grid-area: 2/7/3/10;    
+}
+.container .inner-container .index .grid-container .grid-con>ul>li:nth-child(8) {
+    grid-area: 2/10/3/-1;
 }
