--- a/css/container/indexContainer.css
+++ b/css/container/indexContainer.css
@@ -1,24 +1,26 @@
 /* container */
-.container {
-    
-}
+.container {}
+
 .container .inner-container {
     display: flex;
     justify-content: center;
 }
+
 .container .inner-container .index {
     flex: 0 1 1600px;
     background-color: #ccf;
 }
+
 .container .inner-container .index .grid-container {
     display: grid;
     grid-template-columns: repeat(12, 1fr);
     grid-template-rows: minmax(600px, auto) repeat(2, minmax(50px, auto));
-    
+
     grid-auto-rows: minmax(50px, auto);
-    
+
     gap: 5px;
 }
+
 .container .inner-container .index .grid-container .grid-gallery {
     grid-area: 1/1/2/-1;
     background-color: #ffc;
@@ -26,6 +28,7 @@
     /* filter: blur(1px); */
     /* filter: grayscale(0.5); */
 }
+
 .container .inner-container .index .grid-container .grid-menu {
     grid-area: 2/1/3/-1;
     background-color: #fcc;
@@ -33,68 +36,195 @@
     justify-content: space-between;
     padding: 15px 0;
 }
+
 .container .inner-container .index .grid-container .grid-menu .sub-menu {
     /* flex: 0 1 400px; */
     display: flex;
     justify-content: space-between;
 
 }
+
 .container .inner-container .index .grid-container .grid-menu .sub-menu>ul {
     display: flex;
     justify-content: space-between;
 }
+
 .container .inner-container .index .grid-container .grid-menu .sub-menu>ul>li {
     line-height: 30px;
     display: flex;
     justify-content: space-between;
     font-size: 12px;
     padding: 0 10px;
+    background-color: #fff;
 }
+
 .container .inner-container .index .grid-container .grid-menu span.right-btn {
     display: block;
     flex: 0 0 100px;
     height: 30px;
     background-color: #000;
 }
+
 .container .inner-container .index .grid-container .grid-con {
     grid-area: 3/1/4/-1;
     background-color: #ccc;
 }
+
 .container .inner-container .index .grid-container .grid-con>ul {
     display: grid;
-    
+
     grid-template-columns: repeat(12, 1fr);
-    grid-template-rows: repeat(2, minmax(400px, auto));
-    
-    grid-auto-rows: minmax(400px, auto);
+    grid-template-rows: repeat(2, minmax(370px, auto));
+
+    grid-auto-rows: minmax(370px, auto);
     gap: 5px;
 }
+
 .container .inner-container .index .grid-container .grid-con>ul>li img {
     width: 100%;
     height: auto;
     display: block;
 }
+
+.container .inner-container .index .grid-container .grid-con>ul>li {
+    border: 1px solid;
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    transition: all 0.1s ease-in-out;
+    border-radius: 5%;
+    overflow: hidden;
+}
+
+.container .inner-container .index .grid-container .grid-con>ul>li:hover {
+    filter: grayscale(1);
+    cursor: pointer;
+    transform: translateY(-10px);
+    transform: scale(1.05);
+    box-shadow: 1px 2px 4px #000;
+}
+
+.container .inner-container .index .grid-container .grid-con>ul>li p {
+    text-align: center;
+    line-height: 30px;
+    border: 1px solid;
+    padding: 5px;
+    box-sizing: border-box;
+    background-color: rgb(255, 102, 102);
+}
+
 .container .inner-container .index .grid-container .grid-con>ul>li:nth-child(1) {
     grid-area: 1/1/2/4;
 }
+
 .container .inner-container .index .grid-container .grid-con>ul>li:nth-child(2) {
     grid-area: 1/4/2/7;
 }
+
 .container .inner-container .index .grid-container .grid-con>ul>li:nth-child(3) {
     grid-area: 1/7/2/10;
 }
+
 .container .inner-container .index .grid-container .grid-con>ul>li:nth-child(4) {
-    grid-area: 1/10/2/-1;    
+    grid-area: 1/10/2/-1;
 }
+
 .container .inner-container .index .grid-container .grid-con>ul>li:nth-child(5) {
     grid-area: 2/1/3/4;
 }
+
 .container .inner-container .index .grid-container .grid-con>ul>li:nth-child(6) {
-    grid-area: 2/4/3/7;    
+    grid-area: 2/4/3/7;
 }
+
 .container .inner-container .index .grid-container .grid-con>ul>li:nth-child(7) {
-    grid-area: 2/7/3/10;    
+    grid-area: 2/7/3/10;
 }
+
 .container .inner-container .index .grid-container .grid-con>ul>li:nth-child(8) {
     grid-area: 2/10/3/-1;
+}
+
+@media only screen and (max-width:959px) {
+    .container .inner-container .index .grid-container .grid-con>ul {
+        grid-template-columns: repeat(8, 1fr);
+        grid-template-rows: repeat(2, minmax(400px, auto));
+
+        grid-auto-rows: minmax(400px, auto);
+    }
+    
+    .container .inner-container .index .grid-container .grid-con>ul>li:nth-child(1) {
+        grid-area: 1/1/2/5;
+    }
+    
+    .container .inner-container .index .grid-container .grid-con>ul>li:nth-child(2) {
+        grid-area: 1/5/2/-1;
+    }
+    
+    .container .inner-container .index .grid-container .grid-con>ul>li:nth-child(3) {
+        grid-area: 2/1/3/5;
+    }
+    
+    .container .inner-container .index .grid-container .grid-con>ul>li:nth-child(4) {
+        grid-area: 2/5/3/-1;
+    }
+    
+    .container .inner-container .index .grid-container .grid-con>ul>li:nth-child(5) {
+        grid-area: 3/1/4/5;
+    }
+    
+    .container .inner-container .index .grid-container .grid-con>ul>li:nth-child(6) {
+        grid-area: 3/5/4/-1;
+    }
+    
+    .container .inner-container .index .grid-container .grid-con>ul>li:nth-child(7) {
+        grid-area: 4/1/5/5;
+    }
+    
+    .container .inner-container .index .grid-container .grid-con>ul>li:nth-child(8) {
+        grid-area: 4/5/5/-1;
+    }
+}
+
+@media only screen and (max-width:767px) {
+    .container .inner-container .index .grid-container .grid-con>ul {
+        grid-template-columns: repeat(4, 1fr);
+        grid-template-rows: repeat(2, minmax(400px, auto));
+
+        grid-auto-rows: minmax(400px, auto);
+        gap: 10px;
+    }
+    
+    .container .inner-container .index .grid-container .grid-con>ul>li:nth-child(1) {
+        grid-area: 1/1/2/-1;
+    }
+    
+    .container .inner-container .index .grid-container .grid-con>ul>li:nth-child(2) {
+        grid-area: 2/1/3/-1;
+    }
+    
+    .container .inner-container .index .grid-container .grid-con>ul>li:nth-child(3) {
+        grid-area: 3/1/4/-1;
+    }
+    
+    .container .inner-container .index .grid-container .grid-con>ul>li:nth-child(4) {
+        grid-area: 4/1/5/-1;
+    }
+    
+    .container .inner-container .index .grid-container .grid-con>ul>li:nth-child(5) {
+        grid-area: 5/1/6/-1;
+    }
+    
+    .container .inner-container .index .grid-container .grid-con>ul>li:nth-child(6) {
+        grid-area: 6/1/7/-1;
+    }
+    
+    .container .inner-container .index .grid-container .grid-con>ul>li:nth-child(7) {
+        grid-area: 7/1/8/-1;
+    }
+    
+    .container .inner-container .index .grid-container .grid-con>ul>li:nth-child(8) {
+        grid-area: 8/1/9/-1;
+    }
 }
