--- a/css/common/header.css
+++ b/css/common/header.css
@@ -10,7 +10,7 @@ html {
 }
 #wrap {
     width: 100%;
-    height: 100vh;
+    height: auto;
     /* font-size: 1rem; */
     padding: 0.5em;
     /* border: 0.05em solid; */
